--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <meta charset="UTF-8">
 <title>Focusly</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="manifest" href="manifest.json">
+<link rel="manifest" href="icons/manifest.json">
+
+
 
 
 <style>
